--- a/Labs/Lab9/lab9.html
+++ b/Labs/Lab9/lab9.html
@@ -34,9 +34,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="#">Pricing</a>
         </ul>
-        <form action="http://courses.washington.edu/bimd233/bimd.php"method="post">
+        <form action="http://courses.washington.edu/bimd233/bimd.php" method="post">
             <input type="text" class="form-control" placeholder="Username" aria-label="Username"
-               aria-describedby="basic-addon1">
+                   aria-describedby="basic-addon1">
             <input type="password" class="form-control" placeholder="Password" id="exampleInputPassword1">
             <input type="submit">
         </form>
@@ -53,7 +53,7 @@
     <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
 </div>
 
-<div class="row">
+<!--<div class="row">
     <div class="col-sm-6">
         <div class="card">
             <div class="card-body">
@@ -89,6 +89,58 @@
                     Tincidunt vitae semper quis lectus nulla at volutpat. Sollicitudi</p>
                 <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
+        </div>
+    </div>
+</div>
+-->
+
+<div class="card-group">
+    <div class="card">
+        <div class="card-body">
+            <h5 class="card-title" Sed vulputate odio></h5>
+            <p class="card-text">
+                Id aliquet lectus proin nibh nisl condimentum. Mattis pellentesque id nibh tortor id aliquet lectus
+                proin nibh. Eu sem integer vitae justo eget. Odio tempor orci dapibus ultrices in iaculis nunc sed.
+                Faucibus scelerisque eleifend donec pretium vulputate. Egestas sed tempus urna et pharetra pharetra
+                massa massa. Enim diam vulputate ut pharetra. Vel turpis nunc eget lorem dolor sed viverra ipsum.
+                Porttitor eget dolor morbi non. Faucibus vitae aliquet nec ullamcorper sit amet. Vel quam elementum
+                pulvinar etiam. Condimentum vitae sapien pellentesque habitant morbi tristique senectus et netus. Sit
+                amet porttitor eget dolor morbi. Consequat mauris nunc congue nisi. Lacus viverra vitae congue eu
+                consequat ac felis. Sed turpis tincidunt id aliquet risus.</p>
+            <p class="card-text">
+                <small class="text-muted">Last updated 3 mins ago</small>
+            </p>
+        </div>
+    </div>
+    <div class="card">
+        <div class="card-body">
+            <h5 class="card-title">Risus commodo viverra </h5>
+            <p class="card-text">Interdum velit laoreet id donec ultrices tincidunt arcu non sodales. Non quam lacus
+                suspendisse faucibus interdum. Placerat duis ultricies lacus sed turpis tincidunt. Sit amet est placerat
+                in egestas erat imperdiet sed euismod. Netus et malesuada fames ac turpis egestas maecenas pharetra.
+                Lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi. Nisl purus in mollis nunc sed id
+                semper. Quis auctor elit sed vulputate. Sed arcu non odio euismod lacinia. Neque viverra justo nec
+                ultrices dui sapien eget. Pharetra convallis posuere morbi leo. Dictum sit amet justo donec enim diam
+                vulputate ut pharetra.</p>
+            <p class="card-text">
+                <small class="text-muted">Last updated 3 mins ago</small>
+            </p>
+        </div>
+    </div>
+    <div class="card">
+        <div class="card-body">
+            <h5 class="card-title">Eros donec ac odio</h5>
+            <p class="card-text">Id aliquet lectus proin nibh nisl condimentum. Mattis pellentesque id nibh tortor id
+                aliquet lectus proin nibh. Eu sem integer vitae justo eget. Odio tempor orci dapibus ultrices in iaculis
+                nunc sed. Faucibus scelerisque eleifend donec pretium vulputate. Egestas sed tempus urna et pharetra
+                pharetra massa massa. Enim diam vulputate ut pharetra. Vel turpis nunc eget lorem dolor sed viverra
+                ipsum. Porttitor eget dolor morbi non. Faucibus vitae aliquet nec ullamcorper sit amet. Vel quam
+                elementum pulvinar etiam. Condimentum vitae sapien pellentesque habitant morbi tristique senectus et
+                netus. Sit amet porttitor eget dolor morbi. Consequat mauris nunc congue nisi. Lacus viverra vitae
+                congue eu consequat ac felis. Sed turpis tincidunt id aliquet risus.</p>
+            <p class="card-text">
+                <small class="text-muted">Last updated 3 mins ago</small>
+            </p>
         </div>
     </div>
 </div>
