--- a/Labs/Lab9/lab9.html
+++ b/Labs/Lab9/lab9.html
@@ -97,7 +97,7 @@
 <div class="card-group">
     <div class="card">
         <div class="card-body">
-            <h5 class="card-title" Sed vulputate odio></h5>
+            <h5 class="card-title">Sed vulputate odio</h5>
             <p class="card-text">
                 Id aliquet lectus proin nibh nisl condimentum. Mattis pellentesque id nibh tortor id aliquet lectus
                 proin nibh. Eu sem integer vitae justo eget. Odio tempor orci dapibus ultrices in iaculis nunc sed.
