--- a/Labs/Lab9/lab9.html
+++ b/Labs/Lab9/lab9.html
@@ -49,50 +49,10 @@
         et dolore magna aliqua. Pharetra massa massa ultricies mi quis hendrerit dolor magna eget. Euismod quis viverra
         nibh cras pulvinar. Orci porta non pulvinar neque.</p>
     <hr class="my-4">
-    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+    <p>Nibh cras pulvinar mattis nunc sed blandit libero volutpat. Maecenas pharetra convallis posuere morbi leo urna
+        molestie at. Nulla posuere sollicitudin aliquam ultrices sagittis. </p>
     <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
 </div>
-
-<!--<div class="row">
-    <div class="col-sm-6">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Pretium nibh ipsum</h5>
-                <p class="card-text">Ut eu sem integer vitae justo. Cras tincidunt lobortis feugiat vivamus at. Dolor
-                    sed viverra ipsum nunc aliquet bibendum. Cursus vitae congue mauris rhoncus aenean vel elit
-                    scelerisque mauris. Aliquam id diam maecenas ultricies mi eget mauris pharetra et. Tortor vitae
-                    purus faucibus ornare. Elit eget gravida cum sociis natoque penatibus. Volutpat maecenas volutpat
-                    blandit aliquam etiam erat velit scelerisque in. Nam libero justo laoreet sit amet cursus sit amet.
-                    Id leo in vitae turpis. Ullamcorper malesuada proin libero nunc consequat interdum varius sit amet.
-                    Id aliquet lectus proin nibh nisl condimentum id. Tincidunt vitae semper quis lectus nulla at
-                    volutpat diam. Praesent elementum facilisis leo vel fringilla est. Ut lectus arcu bibendum at varius
-                    vel pharetra. Eu sem integer vitae justo eget magna fermentum iaculis eu. Egestas purus viverra
-                    accumsan in nisl nisi.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-        </div>
-    </div>
-    <div class="col-sm-6">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Id leo in vitae turpis</h5>
-                <p class="card-text">Donec ultrices tincidunt arcu non sodales neque sodales ut etiam. Auctor elit sed
-                    vulputate mi. Tincidunt praesent semper feugiat nibh sed pulvinar proin gravida hendrerit. Id
-                    faucibus nisl tincidunt eget. Interdum consectetur libero id faucibus nisl tincidunt eget nullam
-                    non. Viverra nam libero justo laoreet sit amet cursus sit amet. Integer vitae justo eget magna
-                    fermentum iaculis. Non nisi est sit amet facilisis. Amet tellus cras adipiscing enim. Tristique
-                    magna sit amet purus gravida quis blandit turpis cursus. Enim nulla aliquet porttitor lacus. Mauris
-                    sit amet massa vitae tortor condimentum lacinia. Eget nunc lobortis mattis aliquam faucibus purus in
-                    massa tempor. Tellus rutrum tellus pellentesque eu tincidunt tortor. Eleifend mi in nulla posuere.
-                    Nisl rhoncus mattis rhoncus urna neque viverra justo nec.
-
-                    Tincidunt vitae semper quis lectus nulla at volutpat. Sollicitudi</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-        </div>
-    </div>
-</div>
--->
 
 <div class="card-group">
     <div class="card">
